Fixed article heading on mobile

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -239,7 +239,7 @@
 	}
 }
 .article-header {
-  padding: 45px 0;
+  padding: 45px 20px 45px 20px;
 	margin: 0 auto;
 	max-width: var(--blog-post-width);
   h1 {
